# smdb-db-manager

./: .gitignore  README.md  pyproject.toml  setup.cfg
smdb_db_manager/: SMDB_DBM.py  __init__.py
smdb_db_manager/utils/: ClosedException.py  DBObject.py  DBStatus.py  DefaultTableNames.py  Timer.py  Version.py  __init__.py
test/: SMDB_DBM_test.py
test/utils/: DBObjectTest.py
