[metadata]
# replace with your username:
name = smdb_dbm
version = 0.1.4
author = Janthó Dávid
author_email = davidjantho@gmail.com
description = Database Manager for Server Monitoring Discord bot and other projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NightKey/smdb-dbm
project_urls =
    Bug Tracker = https://github.com/NightKey/smdb-dbm/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: Freeware
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.14